Project1/force-app/main/default/objects/Quest__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quests</relationshipLabel>
    <relationshipName>Quests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>