Project1/force-app/main/default/objects/Quest__c/fields/Danger_Level__c.field-meta.xml
<CustomField>
    <fullName>Danger_Level__c</fullName>
    <description>This field describes the difficulty of a quest.</description>
    <label>Danger Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certain Death</fullName>
            </value>
            <value>
                <fullName>Hard</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Easy</fullName>
            </value>
            <value>
                <fullName>Beginner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>