Project1/force-app/main/default/objects/Quest__c/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <description>The date that a quest became unavailable for completion.</description>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>