Project1/force-app/main/default/objects/Quest__c/fields/Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Opened__c</fullName>
    <description>The date that quest became available for completion.</description>
    <label>Date Opened</label>
    <required>true</required>
    <type>Date</type>
</CustomField>