Project1/force-app/main/default/objects/Quest__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party</label>
    <referenceTo>Party__c</referenceTo>
    <relationshipLabel>Quests</relationshipLabel>
    <relationshipName>Quests</relationshipName>
    <type>Lookup</type>
</CustomField>