Project1/force-app/main/default/objects/Quest__c/fields/Quest_City__c.field-meta.xml
<CustomField>
    <fullName>Quest_City__c</fullName>
    <description>The city affiliated with this quest.</description>
    <label>Quest City</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>