Project1/force-app/main/default/objects/Quest__c/fields/Quest_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Quest_Postal_Code__c</fullName>
    <description>The postal code of the quest-giver.</description>
    <label>Quest Postal Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>