Project1/force-app/main/default/objects/Quest__c/fields/Quest_State__c.field-meta.xml
<CustomField>
    <fullName>Quest_State__c</fullName>
    <description>The home state of the quest-giver.</description>
    <label>Quest State</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>