Project1/force-app/main/default/objects/Quest__c/fields/Quest_Street__c.field-meta.xml
<CustomField>
    <fullName>Quest_Street__c</fullName>
    <description>The street address of the quest-giver.</description>
    <label>Quest Street</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>