Project1/force-app/main/default/objects/Quest__c/fields/Required_Professions__c.field-meta.xml
<CustomField>
    <fullName>Required_Professions__c</fullName>
    <label>Required Professions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adventurer</fullName>
            </value>
            <value>
                <fullName>Craftsman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>