Project1/force-app/main/default/objects/Quest__c/fields/Requires_Party__c.field-meta.xml
<CustomField>
    <fullName>Requires_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Party</label>
    <type>Checkbox</type>
</CustomField>