Project1/force-app/main/default/objects/Quest__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <description>The sub-status of a quest&apos;s completion.</description>
    <label>Sub-Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
            </value>
            <value>
                <fullName>Gonna</fullName>
            </value>
            <value>
                <fullName>Give</fullName>
            </value>
            <value>
                <fullName>You</fullName>
            </value>
            <value>
                <fullName>Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>