Project1/force-app/main/default/objects/Quest__c/validationRules/Quest_Details_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Quest_Details_cannot_be_blank</fullName>
    <active>true</active>
    <description>Ensure that the quest details is at least 10 characters.</description>
    <errorConditionFormula>LEN( Quest_Details__c ) &lt; 10</errorConditionFormula>
    <errorDisplayField>Quest_Details__c</errorDisplayField>
    <errorMessage>The quest details must be at least 10 characters long.</errorMessage>
</ValidationRule>