Project1/force-app/main/default/objects/Quest__c/listViews/Assignment_Arbitrators_Quest.listView-meta.xml
<ListView>
    <fullName>Assignment_Arbitrators_Quest</fullName>
    <filterScope>Queue</filterScope>
    <label>Assignment Arbitrators</label>
    <queue>Assignment_Arbitrators</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>